parser.output
   0  $accept : program $end

   1  program : decl_list

   2  decl_list : decl decl_list
   3            | decl

   4  decl : identifier colon type assign expr semicolon
   5       | identifier colon type semicolon
   6       | identifier colon type assign left_brace stmt_list right_brace

   7  stmt : open_stmt
   8       | closed_stmt

   9  closed_stmt : decl
  10              | expr semicolon
  11              | return opt_expr semicolon
  12              | print expr_list semicolon
  13              | for left_paren opt_expr semicolon opt_expr semicolon opt_expr right_paren closed_stmt
  14              | if left_paren expr right_paren closed_stmt else closed_stmt
  15              | left_brace stmt_list right_brace

  16  open_stmt : if left_paren expr right_paren stmt
  17            | if left_paren expr right_paren closed_stmt else open_stmt
  18            | for left_paren opt_expr semicolon opt_expr semicolon opt_expr right_paren open_stmt

  19  stmt_list : not_empty_stmt_list
  20            |

  21  not_empty_stmt_list : stmt not_empty_stmt_list
  22                      | stmt

  23  expr : expr and compare_expr
  24       | expr or compare_expr
  25       | compare_expr

  26  compare_expr : add_expr ne add_expr
  27               | add_expr gt add_expr
  28               | add_expr ge add_expr
  29               | add_expr lt add_expr
  30               | add_expr le add_expr
  31               | add_expr eq add_expr
  32               | add_expr

  33  add_expr : add_expr add mul_expr
  34           | add_expr subtract mul_expr
  35           | mul_expr

  36  mul_expr : mul_expr multiply expon_expr
  37           | mul_expr divide expon_expr
  38           | mul_expr modulus expon_expr
  39           | expon_expr

  40  expon_expr : neg_expr exponentiate expon_expr
  41             | neg_expr

  42  neg_expr : subtract incr_expr
  43           | not incr_expr
  44           | incr_expr

  45  incr_expr : primary_expr increment
  46            | primary_expr decrement
  47            | primary_expr

  48  opt_expr : expr
  49           |

  50  expr_list : not_empty_expr_list
  51            |

  52  not_empty_expr_list : expr comma not_empty_expr_list
  53                      | expr

  54  primary_expr : identifier
  55               | identifier left_paren expr_list right_paren
  56               | integer_literal
  57               | string_literal
  58               | char_literal
  59               | true
  60               | false
  61               | left_paren expr right_paren
  62               | left_brace not_empty_expr_list right_brace

  63  type : integer
  64       | void
  65       | string
  66       | char
  67       | boolean
  68       | array left_bracket opt_expr right_bracket type
  69       | function type left_paren param_list right_paren

  70  param_list : not_empty_param_list
  71             |

  72  not_empty_param_list : param
  73                       | param comma not_empty_param_list

  74  param : type colon identifier

  75  print : TOKEN_PRINT

  76  function : TOKEN_FUNCTION

  77  for : TOKEN_FOR

  78  if : TOKEN_IF

  79  else : TOKEN_ELSE

  80  return : TOKEN_RETURN

  81  left_brace : TOKEN_LEFT_BRACE

  82  right_brace : TOKEN_RIGHT_BRACE

  83  left_paren : TOKEN_LEFT_PAREN

  84  right_paren : TOKEN_RIGHT_PAREN

  85  left_bracket : TOKEN_LEFT_BRACKET

  86  right_bracket : TOKEN_RIGHT_BRACKET

  87  string : TOKEN_STRING

  88  integer : TOKEN_INTEGER

  89  char : TOKEN_CHAR

  90  void : TOKEN_VOID

  91  boolean : TOKEN_BOOLEAN

  92  array : TOKEN_ARRAY

  93  ge : TOKEN_GE

  94  le : TOKEN_LE

  95  eq : TOKEN_EQ

  96  ne : TOKEN_NE

  97  lt : TOKEN_LT

  98  gt : TOKEN_GT

  99  and : TOKEN_AND

 100  or : TOKEN_OR

 101  not : TOKEN_NOT

 102  increment : TOKEN_INCREMENT

 103  decrement : TOKEN_DECREMENT

 104  add : TOKEN_ADD

 105  subtract : TOKEN_SUBTRACT

 106  multiply : TOKEN_MULTIPLY

 107  divide : TOKEN_DIVIDE

 108  modulus : TOKEN_MODULUS

 109  exponentiate : TOKEN_EXPONENTIATE

 110  assign : TOKEN_ASSIGN

 111  comma : TOKEN_COMMA

 112  colon : TOKEN_COLON

 113  semicolon : TOKEN_SEMICOLON

 114  true : TOKEN_TRUE

 115  false : TOKEN_FALSE

 116  char_literal : TOKEN_CHAR_LITERAL

 117  integer_literal : TOKEN_INTEGER_LITERAL

 118  string_literal : TOKEN_STRING_LITERAL

 119  identifier : TOKEN_IDENTIFIER

state 0
	$accept : . program $end  (0)

	TOKEN_IDENTIFIER  shift 1
	.  error

	program  goto 2
	decl_list  goto 3
	decl  goto 4
	identifier  goto 5


state 1
	identifier : TOKEN_IDENTIFIER .  (119)

	.  reduce 119


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : decl_list .  (1)

	.  reduce 1


state 4
	decl_list : decl . decl_list  (2)
	decl_list : decl .  (3)

	TOKEN_IDENTIFIER  shift 1
	$end  reduce 3

	decl_list  goto 6
	decl  goto 4
	identifier  goto 5


state 5
	decl : identifier . colon type assign expr semicolon  (4)
	decl : identifier . colon type semicolon  (5)
	decl : identifier . colon type assign left_brace stmt_list right_brace  (6)

	TOKEN_COLON  shift 7
	.  error

	colon  goto 8


state 6
	decl_list : decl decl_list .  (2)

	.  reduce 2


state 7
	colon : TOKEN_COLON .  (112)

	.  reduce 112


state 8
	decl : identifier colon . type assign expr semicolon  (4)
	decl : identifier colon . type semicolon  (5)
	decl : identifier colon . type assign left_brace stmt_list right_brace  (6)

	TOKEN_FUNCTION  shift 9
	TOKEN_STRING  shift 10
	TOKEN_INTEGER  shift 11
	TOKEN_CHAR  shift 12
	TOKEN_VOID  shift 13
	TOKEN_BOOLEAN  shift 14
	TOKEN_ARRAY  shift 15
	.  error

	type  goto 16
	integer  goto 17
	void  goto 18
	string  goto 19
	char  goto 20
	boolean  goto 21
	array  goto 22
	function  goto 23


state 9
	function : TOKEN_FUNCTION .  (76)

	.  reduce 76


state 10
	string : TOKEN_STRING .  (87)

	.  reduce 87


state 11
	integer : TOKEN_INTEGER .  (88)

	.  reduce 88


state 12
	char : TOKEN_CHAR .  (89)

	.  reduce 89


state 13
	void : TOKEN_VOID .  (90)

	.  reduce 90


state 14
	boolean : TOKEN_BOOLEAN .  (91)

	.  reduce 91


state 15
	array : TOKEN_ARRAY .  (92)

	.  reduce 92


state 16
	decl : identifier colon type . assign expr semicolon  (4)
	decl : identifier colon type . semicolon  (5)
	decl : identifier colon type . assign left_brace stmt_list right_brace  (6)

	TOKEN_ASSIGN  shift 24
	TOKEN_SEMICOLON  shift 25
	.  error

	assign  goto 26
	semicolon  goto 27


state 17
	type : integer .  (63)

	.  reduce 63


state 18
	type : void .  (64)

	.  reduce 64


state 19
	type : string .  (65)

	.  reduce 65


state 20
	type : char .  (66)

	.  reduce 66


state 21
	type : boolean .  (67)

	.  reduce 67


state 22
	type : array . left_bracket opt_expr right_bracket type  (68)

	TOKEN_LEFT_BRACKET  shift 28
	.  error

	left_bracket  goto 29


state 23
	type : function . type left_paren param_list right_paren  (69)

	TOKEN_FUNCTION  shift 9
	TOKEN_STRING  shift 10
	TOKEN_INTEGER  shift 11
	TOKEN_CHAR  shift 12
	TOKEN_VOID  shift 13
	TOKEN_BOOLEAN  shift 14
	TOKEN_ARRAY  shift 15
	.  error

	type  goto 30
	integer  goto 17
	void  goto 18
	string  goto 19
	char  goto 20
	boolean  goto 21
	array  goto 22
	function  goto 23


state 24
	assign : TOKEN_ASSIGN .  (110)

	.  reduce 110


state 25
	semicolon : TOKEN_SEMICOLON .  (113)

	.  reduce 113


state 26
	decl : identifier colon type assign . expr semicolon  (4)
	decl : identifier colon type assign . left_brace stmt_list right_brace  (6)

	TOKEN_LEFT_BRACE  shift 31
	TOKEN_LEFT_PAREN  shift 32
	TOKEN_NOT  shift 33
	TOKEN_SUBTRACT  shift 34
	TOKEN_TRUE  shift 35
	TOKEN_FALSE  shift 36
	TOKEN_CHAR_LITERAL  shift 37
	TOKEN_INTEGER_LITERAL  shift 38
	TOKEN_STRING_LITERAL  shift 39
	TOKEN_IDENTIFIER  shift 1
	.  error

	expr  goto 40
	compare_expr  goto 41
	add_expr  goto 42
	mul_expr  goto 43
	expon_expr  goto 44
	neg_expr  goto 45
	incr_expr  goto 46
	primary_expr  goto 47
	identifier  goto 48
	string_literal  goto 49
	integer_literal  goto 50
	char_literal  goto 51
	left_brace  goto 52
	left_paren  goto 53
	subtract  goto 54
	not  goto 55
	true  goto 56
	false  goto 57


state 27
	decl : identifier colon type semicolon .  (5)

	.  reduce 5


state 28
	left_bracket : TOKEN_LEFT_BRACKET .  (85)

	.  reduce 85


state 29
	type : array left_bracket . opt_expr right_bracket type  (68)
	opt_expr : .  (49)

	TOKEN_LEFT_BRACE  shift 31
	TOKEN_LEFT_PAREN  shift 32
	TOKEN_NOT  shift 33
	TOKEN_SUBTRACT  shift 34
	TOKEN_TRUE  shift 35
	TOKEN_FALSE  shift 36
	TOKEN_CHAR_LITERAL  shift 37
	TOKEN_INTEGER_LITERAL  shift 38
	TOKEN_STRING_LITERAL  shift 39
	TOKEN_IDENTIFIER  shift 1
	TOKEN_RIGHT_BRACKET  reduce 49

	expr  goto 58
	compare_expr  goto 41
	add_expr  goto 42
	mul_expr  goto 43
	expon_expr  goto 44
	neg_expr  goto 45
	incr_expr  goto 46
	opt_expr  goto 59
	primary_expr  goto 47
	identifier  goto 48
	string_literal  goto 49
	integer_literal  goto 50
	char_literal  goto 51
	left_brace  goto 60
	left_paren  goto 53
	subtract  goto 54
	not  goto 55
	true  goto 56
	false  goto 57


state 30
	type : function type . left_paren param_list right_paren  (69)

	TOKEN_LEFT_PAREN  shift 32
	.  error

	left_paren  goto 61


state 31
	left_brace : TOKEN_LEFT_BRACE .  (81)

	.  reduce 81


state 32
	left_paren : TOKEN_LEFT_PAREN .  (83)

	.  reduce 83


state 33
	not : TOKEN_NOT .  (101)

	.  reduce 101


state 34
	subtract : TOKEN_SUBTRACT .  (105)

	.  reduce 105


state 35
	true : TOKEN_TRUE .  (114)

	.  reduce 114


state 36
	false : TOKEN_FALSE .  (115)

	.  reduce 115


state 37
	char_literal : TOKEN_CHAR_LITERAL .  (116)

	.  reduce 116


state 38
	integer_literal : TOKEN_INTEGER_LITERAL .  (117)

	.  reduce 117


state 39
	string_literal : TOKEN_STRING_LITERAL .  (118)

	.  reduce 118


state 40
	decl : identifier colon type assign expr . semicolon  (4)
	expr : expr . and compare_expr  (23)
	expr : expr . or compare_expr  (24)

	TOKEN_AND  shift 62
	TOKEN_OR  shift 63
	TOKEN_SEMICOLON  shift 25
	.  error

	semicolon  goto 64
	and  goto 65
	or  goto 66


state 41
	expr : compare_expr .  (25)

	.  reduce 25


state 42
	compare_expr : add_expr . ne add_expr  (26)
	compare_expr : add_expr . gt add_expr  (27)
	compare_expr : add_expr . ge add_expr  (28)
	compare_expr : add_expr . lt add_expr  (29)
	compare_expr : add_expr . le add_expr  (30)
	compare_expr : add_expr . eq add_expr  (31)
	compare_expr : add_expr .  (32)
	add_expr : add_expr . add mul_expr  (33)
	add_expr : add_expr . subtract mul_expr  (34)

	TOKEN_GE  shift 67
	TOKEN_LE  shift 68
	TOKEN_EQ  shift 69
	TOKEN_NE  shift 70
	TOKEN_LT  shift 71
	TOKEN_GT  shift 72
	TOKEN_ADD  shift 73
	TOKEN_SUBTRACT  shift 34
	TOKEN_RIGHT_BRACE  reduce 32
	TOKEN_RIGHT_PAREN  reduce 32
	TOKEN_RIGHT_BRACKET  reduce 32
	TOKEN_AND  reduce 32
	TOKEN_OR  reduce 32
	TOKEN_COMMA  reduce 32
	TOKEN_SEMICOLON  reduce 32

	ne  goto 74
	gt  goto 75
	ge  goto 76
	lt  goto 77
	le  goto 78
	eq  goto 79
	add  goto 80
	subtract  goto 81


state 43
	add_expr : mul_expr .  (35)
	mul_expr : mul_expr . multiply expon_expr  (36)
	mul_expr : mul_expr . divide expon_expr  (37)
	mul_expr : mul_expr . modulus expon_expr  (38)

	TOKEN_MULTIPLY  shift 82
	TOKEN_DIVIDE  shift 83
	TOKEN_MODULUS  shift 84
	TOKEN_RIGHT_BRACE  reduce 35
	TOKEN_RIGHT_PAREN  reduce 35
	TOKEN_RIGHT_BRACKET  reduce 35
	TOKEN_GE  reduce 35
	TOKEN_LE  reduce 35
	TOKEN_EQ  reduce 35
	TOKEN_NE  reduce 35
	TOKEN_LT  reduce 35
	TOKEN_GT  reduce 35
	TOKEN_AND  reduce 35
	TOKEN_OR  reduce 35
	TOKEN_ADD  reduce 35
	TOKEN_SUBTRACT  reduce 35
	TOKEN_COMMA  reduce 35
	TOKEN_SEMICOLON  reduce 35

	multiply  goto 85
	divide  goto 86
	modulus  goto 87


state 44
	mul_expr : expon_expr .  (39)

	.  reduce 39


state 45
	expon_expr : neg_expr . exponentiate expon_expr  (40)
	expon_expr : neg_expr .  (41)

	TOKEN_EXPONENTIATE  shift 88
	TOKEN_RIGHT_BRACE  reduce 41
	TOKEN_RIGHT_PAREN  reduce 41
	TOKEN_RIGHT_BRACKET  reduce 41
	TOKEN_GE  reduce 41
	TOKEN_LE  reduce 41
	TOKEN_EQ  reduce 41
	TOKEN_NE  reduce 41
	TOKEN_LT  reduce 41
	TOKEN_GT  reduce 41
	TOKEN_AND  reduce 41
	TOKEN_OR  reduce 41
	TOKEN_ADD  reduce 41
	TOKEN_SUBTRACT  reduce 41
	TOKEN_MULTIPLY  reduce 41
	TOKEN_DIVIDE  reduce 41
	TOKEN_MODULUS  reduce 41
	TOKEN_COMMA  reduce 41
	TOKEN_SEMICOLON  reduce 41

	exponentiate  goto 89


state 46
	neg_expr : incr_expr .  (44)

	.  reduce 44


state 47
	incr_expr : primary_expr . increment  (45)
	incr_expr : primary_expr . decrement  (46)
	incr_expr : primary_expr .  (47)

	TOKEN_INCREMENT  shift 90
	TOKEN_DECREMENT  shift 91
	TOKEN_RIGHT_BRACE  reduce 47
	TOKEN_RIGHT_PAREN  reduce 47
	TOKEN_RIGHT_BRACKET  reduce 47
	TOKEN_GE  reduce 47
	TOKEN_LE  reduce 47
	TOKEN_EQ  reduce 47
	TOKEN_NE  reduce 47
	TOKEN_LT  reduce 47
	TOKEN_GT  reduce 47
	TOKEN_AND  reduce 47
	TOKEN_OR  reduce 47
	TOKEN_ADD  reduce 47
	TOKEN_SUBTRACT  reduce 47
	TOKEN_MULTIPLY  reduce 47
	TOKEN_DIVIDE  reduce 47
	TOKEN_MODULUS  reduce 47
	TOKEN_EXPONENTIATE  reduce 47
	TOKEN_COMMA  reduce 47
	TOKEN_SEMICOLON  reduce 47

	increment  goto 92
	decrement  goto 93


state 48
	primary_expr : identifier .  (54)
	primary_expr : identifier . left_paren expr_list right_paren  (55)

	TOKEN_LEFT_PAREN  shift 32
	TOKEN_RIGHT_BRACE  reduce 54
	TOKEN_RIGHT_PAREN  reduce 54
	TOKEN_RIGHT_BRACKET  reduce 54
	TOKEN_GE  reduce 54
	TOKEN_LE  reduce 54
	TOKEN_EQ  reduce 54
	TOKEN_NE  reduce 54
	TOKEN_LT  reduce 54
	TOKEN_GT  reduce 54
	TOKEN_AND  reduce 54
	TOKEN_OR  reduce 54
	TOKEN_INCREMENT  reduce 54
	TOKEN_DECREMENT  reduce 54
	TOKEN_ADD  reduce 54
	TOKEN_SUBTRACT  reduce 54
	TOKEN_MULTIPLY  reduce 54
	TOKEN_DIVIDE  reduce 54
	TOKEN_MODULUS  reduce 54
	TOKEN_EXPONENTIATE  reduce 54
	TOKEN_COMMA  reduce 54
	TOKEN_SEMICOLON  reduce 54

	left_paren  goto 94


state 49
	primary_expr : string_literal .  (57)

	.  reduce 57


state 50
	primary_expr : integer_literal .  (56)

	.  reduce 56


state 51
	primary_expr : char_literal .  (58)

	.  reduce 58


state 52
	decl : identifier colon type assign left_brace . stmt_list right_brace  (6)
	primary_expr : left_brace . not_empty_expr_list right_brace  (62)
	stmt_list : .  (20)

	TOKEN_PRINT  shift 95
	TOKEN_FOR  shift 96
	TOKEN_IF  shift 97
	TOKEN_RETURN  shift 98
	TOKEN_LEFT_BRACE  shift 31
	TOKEN_LEFT_PAREN  shift 32
	TOKEN_NOT  shift 33
	TOKEN_SUBTRACT  shift 34
	TOKEN_TRUE  shift 35
	TOKEN_FALSE  shift 36
	TOKEN_CHAR_LITERAL  shift 37
	TOKEN_INTEGER_LITERAL  shift 38
	TOKEN_STRING_LITERAL  shift 39
	TOKEN_IDENTIFIER  shift 1
	TOKEN_RIGHT_BRACE  reduce 20

	decl  goto 99
	expr  goto 100
	compare_expr  goto 41
	add_expr  goto 42
	mul_expr  goto 43
	expon_expr  goto 44
	neg_expr  goto 45
	incr_expr  goto 46
	not_empty_expr_list  goto 101
	primary_expr  goto 47
	stmt  goto 102
	open_stmt  goto 103
	closed_stmt  goto 104
	stmt_list  goto 105
	not_empty_stmt_list  goto 106
	identifier  goto 107
	string_literal  goto 49
	integer_literal  goto 50
	char_literal  goto 51
	left_brace  goto 108
	return  goto 109
	print  goto 110
	for  goto 111
	left_paren  goto 53
	if  goto 112
	subtract  goto 54
	not  goto 55
	true  goto 56
	false  goto 57


state 53
	primary_expr : left_paren . expr right_paren  (61)

	TOKEN_LEFT_BRACE  shift 31
	TOKEN_LEFT_PAREN  shift 32
	TOKEN_NOT  shift 33
	TOKEN_SUBTRACT  shift 34
	TOKEN_TRUE  shift 35
	TOKEN_FALSE  shift 36
	TOKEN_CHAR_LITERAL  shift 37
	TOKEN_INTEGER_LITERAL  shift 38
	TOKEN_STRING_LITERAL  shift 39
	TOKEN_IDENTIFIER  shift 1
	.  error

	expr  goto 113
	compare_expr  goto 41
	add_expr  goto 42
	mul_expr  goto 43
	expon_expr  goto 44
	neg_expr  goto 45
	incr_expr  goto 46
	primary_expr  goto 47
	identifier  goto 48
	string_literal  goto 49
	integer_literal  goto 50
	char_literal  goto 51
	left_brace  goto 60
	left_paren  goto 53
	subtract  goto 54
	not  goto 55
	true  goto 56
	false  goto 57


state 54
	neg_expr : subtract . incr_expr  (42)

	TOKEN_LEFT_BRACE  shift 31
	TOKEN_LEFT_PAREN  shift 32
	TOKEN_TRUE  shift 35
	TOKEN_FALSE  shift 36
	TOKEN_CHAR_LITERAL  shift 37
	TOKEN_INTEGER_LITERAL  shift 38
	TOKEN_STRING_LITERAL  shift 39
	TOKEN_IDENTIFIER  shift 1
	.  error

	incr_expr  goto 114
	primary_expr  goto 47
	identifier  goto 48
	string_literal  goto 49
	integer_literal  goto 50
	char_literal  goto 51
	left_brace  goto 60
	left_paren  goto 53
	true  goto 56
	false  goto 57


state 55
	neg_expr : not . incr_expr  (43)

	TOKEN_LEFT_BRACE  shift 31
	TOKEN_LEFT_PAREN  shift 32
	TOKEN_TRUE  shift 35
	TOKEN_FALSE  shift 36
	TOKEN_CHAR_LITERAL  shift 37
	TOKEN_INTEGER_LITERAL  shift 38
	TOKEN_STRING_LITERAL  shift 39
	TOKEN_IDENTIFIER  shift 1
	.  error

	incr_expr  goto 115
	primary_expr  goto 47
	identifier  goto 48
	string_literal  goto 49
	integer_literal  goto 50
	char_literal  goto 51
	left_brace  goto 60
	left_paren  goto 53
	true  goto 56
	false  goto 57


state 56
	primary_expr : true .  (59)

	.  reduce 59


state 57
	primary_expr : false .  (60)

	.  reduce 60

